# cango.nstd

./: CMakeLists.txt
app/: gen_graph.py  gen_header.cpp  gen_includes.cpp  pather.cpp  transform_hpp.py
include/cango/: nstd.hpp
include/cango/nstd/: type_trans.hpp
include/cango/nstd/type_trans/: all_of.hpp  any_of.hpp  bool_type_value.hpp  contains.hpp  count_of.hpp  false_tv.hpp  forward.hpp  is_lv_ref.hpp  is_ref.hpp  is_rv_ref.hpp  is_same.hpp  just_type.hpp  just_value.hpp  logic_and.hpp  logic_not.hpp  logic_or.hpp  modify.hpp  move.hpp  pile.hpp  remove_c.hpp  remove_cv.hpp  remove_ref.hpp  remove_ref_cv.hpp  remove_v.hpp  target_at.hpp  true_tv.hpp  type_at.hpp  type_value.hpp
module/: cango.nstd.type_trans.all_of.ixx  cango.nstd.type_trans.any_of.ixx  cango.nstd.type_trans.contains.ixx  cango.nstd.type_trans.count_of.ixx  cango.nstd.type_trans.false_tv.ixx  cango.nstd.type_trans.forward.ixx  cango.nstd.type_trans.is_lv_ref.ixx  cango.nstd.type_trans.is_ref.ixx  cango.nstd.type_trans.is_rv_ref.ixx  cango.nstd.type_trans.is_same.ixx  cango.nstd.type_trans.ixx  cango.nstd.type_trans.just_type.ixx  cango.nstd.type_trans.just_value.ixx  cango.nstd.type_trans.logic_and.ixx  cango.nstd.type_trans.logic_not.ixx  cango.nstd.type_trans.logic_or.ixx  cango.nstd.type_trans.modify.ixx  cango.nstd.type_trans.move.ixx  cango.nstd.type_trans.pile.ixx  cango.nstd.type_trans.remove_c.ixx  cango.nstd.type_trans.remove_cv.ixx  cango.nstd.type_trans.remove_ref.ixx  cango.nstd.type_trans.remove_ref_cv.ixx  cango.nstd.type_trans.remove_v.ixx  cango.nstd.type_trans.target_at.ixx  cango.nstd.type_trans.true_tv.ixx  cango.nstd.type_trans.type_at.ixx  cango.nstd.type_trans.type_value.ixx
src/: nstd.cpp
test/: CMakeLists.txt  simple.cpp
